2003-02-15  Jacob Perkins  <jap1@users.sourceforge.net>

	* data/Makefile.am: Patch from Julio Merino for GConf2 tunnable features,
	fixes bug 106149

2003-02-14  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-ops-key: Added EXPIRES option and state for ::sign
	* seahorse-sign: Added expires option for keys that expire

2003-02-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-widget: Added index property to SeahorseKeyWidget

2003-02-12  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2003-02-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: More interface updates, connect key op signals
	* seahorse-key-properties: Interface updates to be consistent with key-manager
	* seahorse-sign: Added
	* seahorse-ops-key: Added ::sign

2003-02-11  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Interface updates regarding comments from
	Mark Finlay: added context menu for keys, added buttons/items for
	possible but not-yet-implemented features

2003-02-10  Jacob Perkins  <jap1@users.sourceforge.net>

	* Release 0.7.0

2003-02-09  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: View->Subkeys not visible if there are none
	* seahorse-passphrase: Bug fix

2003-02-08  Jacob Perkins  <jap1@users.sourceforge.net>

	* pixmaps/Makefile.am: Only install pixmaps to $(data_dir)/pixmaps
	* seahorse-widget: Set window icon to seahorse.png
	* seahorse-key-manager: Change path for seahorse.png in about dialog,
	add ::selection_changed to desensitize key options if none selected
	* src/seahorse-file-manager.glade2:
	* src/seahorse-key-manager.glade2:
	* src/seahorse-key-properties.glade2:
	* src/seahorse-text-editor.glade2:
	* src/dialogs/seahorse-add-subkey.glade2:
	* src/dialogs/seahorse-add-uid.glade2:
	* src/dialogs/seahorse-export.glade2:
	* src/dialogs/seahorse-generate.glade2:
	* src/dialogs/seahorse-import.glade2: