@@ -16,6 +16,8 @@ src/dialogs/seahorse-preferences.glade2
 src/dialogs/seahorse-recipients.c
 src/dialogs/seahorse-recipients.glade2
 src/dialogs/seahorse-revoke.glade2
+src/dialogs/seahorse-sign.glade2
+src/dialogs/seahorse-sign.c
 src/dialogs/seahorse-signatures.c
 src/dialogs/seahorse-signatures.glade2
 src/seahorse-context.c
