@@ -19,6 +19,8 @@
  * Boston, MA 02111-1307, USA.
  */
 
+#include <gnome.h>
+
 #include "seahorse-sign.h"
 #include "seahorse-key-widget.h"
 #include "seahorse-ops-key.h"
@@ -31,7 +33,8 @@ ok_clicked (GtkButton *button, SeahorseWidget *swidget)
 	SeahorseKeyWidget *skwidget;
 	SeahorseSignCheck check;
 	SeahorseSignOptions options = 0;
-	GpgmeError err;
+	GtkWidget *dialog;
+	gchar *info;
 	
 	skwidget = SEAHORSE_KEY_WIDGET (swidget);
 	
@@ -49,17 +52,61 @@ ok_clicked (GtkButton *button, SeahorseWidget *swidget)
 	if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (
 	glade_xml_get_widget (swidget->xml, "expires"))))
 		options = options | SIGN_EXPIRES;
-	
-	err = seahorse_ops_key_sign (swidget->sctx, skwidget->skey, skwidget->index, check, options);
-	g_print ("%s\n", gpgme_strerror (err));
-	seahorse_widget_destroy (swidget);
+	/* if sign successful */
+	if (seahorse_ops_key_sign (swidget->sctx, skwidget->skey, skwidget->index, check, options)) {
+		seahorse_widget_destroy (swidget);
+		/* show status */
+		if (skwidget->index == 0)
+			info = g_strdup_printf (_("Successfully signed all user IDs for key %s"),
+				seahorse_key_get_keyid (skwidget->skey, 0));
+		else
+			info = g_strdup_printf (_("Successfully signed user ID %s for key %s"),
+				seahorse_key_get_userid (skwidget->skey, skwidget->index-1),
+				seahorse_key_get_keyid (skwidget->skey, 0));
+		dialog = gtk_message_dialog_new (NULL, GTK_DIALOG_MODAL,
+			GTK_MESSAGE_INFO, GTK_BUTTONS_OK, info);
+		gtk_dialog_run (GTK_DIALOG (dialog));
+		gtk_widget_destroy (dialog);
+	}
+	else
+		seahorse_util_show_error (GTK_WINDOW (glade_xml_get_widget (swidget->xml, swidget->name)),
+			_("Signing failed\n"));
 }
 
+/**
+ * seahorse_sign_new:
+ * @sctx: Current #SeahorseContext
+ * @skey: #SeahorseKey to sign
+ * @index: Index of user ID in @skey to sign, 0 being all user IDs
+ *
+ * Asks user if sure about signing user ID(s),
+ * then presents a dialog for signing the key.
+ **/
 void
 seahorse_sign_new (SeahorseContext *sctx, SeahorseKey *skey, const guint index)
 {
 	SeahorseWidget *swidget;
+	GtkWidget *dialog;
+	gchar *question;
+	gint response;
 	
+	/* ask question */
+	if (index == 0)
+		question = g_strdup_printf (_("Are you sure you want to sign all user IDs for key %s?"),
+			seahorse_key_get_keyid (skey, 0));
+	else
+		question = g_strdup_printf (_("Are you sure you want to sign user ID %s for key %s?"),
+			seahorse_key_get_userid (skey, index - 1), seahorse_key_get_keyid (skey, 0));
+	
+	dialog = gtk_message_dialog_new (GTK_WINDOW (
+		glade_xml_get_widget (swidget->xml, swidget->name)), GTK_DIALOG_DESTROY_WITH_PARENT,
+		GTK_MESSAGE_QUESTION, GTK_BUTTONS_YES_NO, question);
+	response = gtk_dialog_run (GTK_DIALOG (dialog));
+	gtk_widget_destroy (dialog);
+	
+	if (response != GTK_RESPONSE_YES)
+		return;
+	/* do widget */
 	swidget = seahorse_key_widget_new_with_index ("sign", sctx, skey, index);
 	g_return_if_fail (swidget != NULL);
 	
