@@ -1,3 +1,7 @@
+2003-02-15  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* POTFILES.in: Added seahorse-sign
+
 2003-02-12  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
