@@ -2,6 +2,8 @@
 
 	* data/Makefile.am: Patch from Julio Merino for GConf2 tunnable features,
 	fixes bug 106149
+	* seahorse-sign: Added confirmation and info dialogs
+	* seahorse-key-manager: Added Delete and Return accelerators
 
 2003-02-14  Jacob Perkins  <jap1@users.sourceforge.net>
 
